--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/mitalletap/mitalletap-portfolio#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node": "^14.2.0"
-  }
+    "mongoose": "^5.9.13",
+    "node": "^14.2.0",
+    "nodemon": "^2.0.3"
+  },
+  "devDependencies": {}
 }
