--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --watch-all",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watch-all",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
