--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --no-watchman",
     "test:coverage": "react-scripts test --coverage --watch-all",
     "eject": "react-scripts eject"
   },
