--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/tempPolyfills.js",
+      "!src/serviceWorker.js"
+    ]
+  },
   "proxy": "http://localhost:3000/",
   "scripts": {
     "start": "react-scripts start",
