--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "concurrently \"pm2 restart server.js\" \"cd client && npm start\"",
+    "update-project": "concurrently \"npm install\" \"cd client && npm install\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/mitalletap/mitalletap-portfolio#readme",
   "dependencies": {
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
