Serving Production Build to website instead of Development Build

--- a/client/app.config.json
+++ b/client/app.config.json
@@ -4,7 +4,7 @@
         "name": "client",
         "script": "npx",
         "interpreter": "none",
-        "args": "serve -S build -l 3000"
+        "args": "serve -s build -l 3000"
       }
     ]
   }
