--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,17 +13,19 @@
     "history": "^4.10.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "webpack": "^4.42.0"
   },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/index.js",
       "!src/tempPolyfills.js",
-      "!src/serviceWorker.js"
+      "!src/serviceWorker.js",
+      "!src/history.js"
     ]
   },
   "proxy": "http://localhost:3000/",
