--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
     "start": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 restart server.js\" \"cd client && pm2 restart client\"",
     "build": "cd client && npm run build",
     "deploy": "cd client && serve -s build -l 3000",
     "init-project": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 start server.js\" \"cd client && pm2 start app.config.json\"",
     "update-project": "concurrently -n 'updating server,updating client' -c 'blue,green' \"npm install\" \"cd client && npm install\"",
-    "stop": "concurrently -n 'stopping server,stopping client' -c 'red,yellow' \"pm2 stop server.js\" \"cd client && pm2 stop client\""
+    "stop": "concurrently -n 'stopping server,stopping client' -c 'red,yellow' \"pm2 stop server.js\" \"cd client && pm2 stop client\"",
+    "test": "jest",
+    "test:ci": "CI=true react-scripts test --no-watchman",
+    "test:coverage": "react-scripts test --coverage --watch-all"
   },
   "repository": {
     "type": "git",
@@ -23,13 +25,15 @@
   },
   "homepage": "https://github.com/mitalletap/mitalletap-portfolio#readme",
   "dependencies": {
+    "aws-sdk": "^2.673.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.13",
     "node": "^14.2.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "react-native-s3-upload": "0.0.12"
   },
   "devDependencies": {}
 }
