--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 restart server.js\" \"cd client && pm2 restart client\"",
+    "restart": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 restart server\" \"pm2 restart client\"",
     "build": "cd client && npm run build",
     "deploy": "cd client && serve -s build -l 3000",
-    "init-project": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 start server.js\" \"cd client && pm2 start app.config.json\"",
+    "start": "concurrently -n 'server,client' -c 'magenta,cyan' \"pm2 start server.js\" \"cd client && pm2 start app.config.json\"",
     "update-project": "concurrently -n 'updating server,updating client' -c 'blue,green' \"npm install\" \"cd client && npm install\"",
     "stop": "concurrently -n 'stopping server,stopping client' -c 'red,yellow' \"pm2 stop server.js\" \"cd client && pm2 stop client\"",
     "test": "jest",
